--- a/src/material/core/tokens/m2/mat/_form-field.scss
+++ b/src/material/core/tokens/m2/mat/_form-field.scss
@@ -39,6 +39,21 @@ $prefix: (mat, form-field);
     // https://developer.mozilla.org/en-US/docs/Web/CSS/system-color
     select-disabled-option-text-color: if($is-dark, palette.$dark-disabled-text, GrayText),
 
+    // These tokens are necessary for M3. MDC has them built in already, but:
+    // 1. They are too specific, breaking a lot of internal clients.
+    // 2. The larger selectors result in a larger bundle.
+    // Note: MDC has tokens for all the various states of the icons. Some of them are ommitted,
+    // because they resolve to the same value (e.g. focus and base states for the leading icon
+    // are the same).
+    leading-icon-color: unset,
+    disabled-leading-icon-color: unset,
+
+    trailing-icon-color: unset,
+    disabled-trailing-icon-color: unset,
+    error-focus-trailing-icon-color: unset,
+    error-hover-trailing-icon-color: unset,
+    error-trailing-icon-color: unset,
+
     // These values are taken from the MDC select implementation:
     // https://github.com/material-components/material-components-web/blob/master/packages/mdc-select/_select-theme.scss
     enabled-select-arrow-color: rgba($on-surface, 0.54),
